    <?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="@dimen/margem"

    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A6ABE2"
        android:text="@string/nome"
        android:textColor="#9F13C3"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintNome"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:textColor="#9F13C3"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintEmail"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textSize="16sp"
        android:textColor="#9F13C3" />

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hintTelefone"
        android:inputType="phone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whats"
            android:textSize="16sp"
            android:textColor="#9F13C3" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/swtWhats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textOff="@string/off"
            android:textOn="@string/on" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/periodo"
        android:textSize="16sp"
        android:textColor="#9F13C3" />

    <RadioGroup
        android:id="@+id/rdgPeriodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/rdbManha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/manha"
        android:layout_weight="1"
        />

    <RadioButton
        android:id="@+id/rdbTarde"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tarde"
        android:layout_weight="1"
        />

    <RadioButton
        android:id="@+id/rdbNoite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/noite"
        android:layout_weight="1"
        />

    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferencias"
        android:textSize="16sp"
        android:textColor="#9F13C3" />

    <CheckBox
        android:id="@+id/chkINternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Internet" />

    <CheckBox
        android:id="@+id/chkTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv" />
    <CheckBox
        android:id="@+id/chkTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone" />

    <CheckBox
        android:id="@+id/chkStreamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Streaming" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/limpar"/>

        <Button
            android:id="@+id/btnExibir"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exibir"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lblDados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#C98FEB"
        android:padding="@dimen/margem"
        android:layout_marginTop="@dimen/margem"
        android:visibility="visible"
        >

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtWhatsApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtPeriodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtPreferencia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>




    </LinearLayout>



</LinearLayout>
